--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Server</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>Fun with APIs</h1>
-	<button id="getData">Some API data :P</button>
+	<button id="get-Data">Some API data :P</button>
 	<p id="hello"></p>
 	<form id="postData">
-		<input type="text" name="" id="daHead">
-		<textarea name="" id="daBody"></textarea>
+		<input type="text" name="Title" id="daHead">
+		<textarea name="Body" id="daBody"></textarea>
 		<input type="submit" value="send answers">
 	</form>
 	<p id="hi"></p>
